--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,10 @@
   "name": "drill",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "start": "node ./app.js",
+    "dev": "nodemon ./app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -10,7 +13,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "kafkajs": "^2.2.4"
+    "http": "^0.0.1-security",
+    "kafkajs": "^2.2.4",
+    "mongoose": "^8.5.1",
+    "socket.io": "^4.7.5"
   }
 }
