--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.19.2",
     "http": "^0.0.1-security",
     "kafkajs": "^2.2.4",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
     "socket.io": "^4.7.5"
   }
