--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,31 +1,22 @@
-# Use the official Node.js image
-FROM node:16
+FROM node:18 AS build
 
-# Set the working directory
-WORKDIR /app
+WORKDIR /src
 
-# Copy package.json and package-lock.json
 COPY package*.json ./
 
-# Install dependencies
 RUN npm install
 
-# Copy the rest of the application
 COPY . .
 
-# Build the application
 RUN npm run build
 
-# Install serve to serve the build directory
-RUN npm install -g serve
+FROM nginx:alpine
 
-# Expose port 3000
-EXPOSE 5173
+COPY --from=build /src/dist /usr/share/nginx/html
 
-# Command to serve the build directory
-CMD ["serve", "-s", "build", "-l", "5173"]
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
+EXPOSE 4173
 
-
-
-
+# Start nginx
+CMD ["nginx", "-g", "daemon off;"]
