--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,6 +28,7 @@ services:
       - "3000:3000"
     volumes:
       - ./server:/usr/src/app
+      - /usr/src/app/node_modules
     environment:
       NODE_ENV: development
       KAFKA_BROKER: PLAINTEXT://kafka:9092
